# libspectre

./: .gitlab-ci.yml  Doxyfile  Makefile.am  NEWS  RELEASING  TODO  autogen.sh  configure.ac  libspectre.pc.in
libspectre/: .gitignore  Makefile.am  ps.c  ps.h  spectre-device.c  spectre-device.h  spectre-document.c  spectre-document.h  spectre-exporter-pdf.c  spectre-exporter-ps.c  spectre-exporter.c  spectre-gs.c  spectre-gs.h  spectre-macros.h  spectre-page.c  spectre-page.h  spectre-private.h  spectre-render-context.c  spectre-render-context.h  spectre-status.c  spectre-status.h  spectre-utils.c  spectre-utils.h  spectre.h
test/: Makefile.am  ossfuzz.sh  parser-test.c  spectre-test.c  spectre_read_fuzzer.c  spectre_read_fuzzer.cc
